--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "declaration": false,
     "module": "es2015",
     "moduleResolution": "node",
+    "resolveJsonModule": true,//importante isso aqui hein
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es5",
